--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -17,6 +17,7 @@
 		<!--alibaba字库-->
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/quan/custom-textarea.css" />
+		<link rel="stylesheet" href="../../css/utils/preview.css" />
 		<!--本页面应用样式表-->
 		<link rel="stylesheet" href="../../css/homework/homework-publish.css" />
 	</head>
@@ -99,6 +100,8 @@
 		<script src="../../js/utils/cryption.js"></script>
 		<script src="../../js/utils/CloudFileUtil.js"></script>
 		<script src="../../js/common.js"></script>
+		<script src="../../js/mui.zoom.js"></script>
+		<script src="../../js/mui.previewimage.js"></script>
 		<!--录音模块-->
 		<script src="../../js/utils/audio.js"></script>
 		<!--协议-->
