--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 			<!--问题列表-->
-			<div class="mui-scroll">
+			<div id="pullrefresh" class="mui-scroll">
 				<ul id="list-container" class="mui-table-view">
 				</ul>
 			</div>
@@ -40,6 +40,8 @@
 		<script src="../../js/mui.pullToRefresh.material.js"></script>-->
 		<!--公共方法js-->
 		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/mui.lazyload.js"></script>
+		<script src="../../js/mui.lazyload.img.js"></script>
 		<!--接口js-->
 		<script src="../../js/publicProtocol.js"></script>
 		<!--求知接口js-->
