地区选择  选择地区后增加确定按钮

--- a/JiaoBaoYun-hb/html/check/area-choose.html
+++ b/JiaoBaoYun-hb/html/check/area-choose.html
@@ -14,6 +14,7 @@
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title">地区选择</h1>
+		    <a id="chose-area" class="mui-pull-right">确定</a>
 		</header>
 		<!--下拉刷新容器-->
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
