增加安卓调用原生的方法打开文件

--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -223,6 +223,7 @@
 									if(pathList.length != 0) {
 										BatchDelete(pathList);
 									}
+									document.getElementById("finish").disabled = false;
 									wd.close();
 								}
 							}, function(upload, status) {
