--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -238,6 +238,7 @@
 									if(pathList.length != 0) {
 										BatchDelete(pathList);
 									}
+									document.getElementById("commit").disabled = false;
 									wd.close();
 								}
 							}, function(upload, status) {
