--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -306,17 +306,14 @@
 								var tempModel0 = tempRspData;
 								//遍历点赞的人
 								for(var item2 in tempModel0.LikeUsers) {
-									//										console.log('item2;;;;;==' + tempModel.utid + ',' + tempModel0.LikeUsers[item2]);
 									if(tempModel.utid == tempModel0.LikeUsers[item2]) {
 										tempModel0.LikeUsers.splice(item2, 1, tempModel);
 									}
 								}
 								//对比id是否一致
 								if(tempModel0.PublisherId == tempModel.utid) {
-									console.log('kkkkkkkkkk='+tempModel0.PublisherId)
 									//合并
 									tempModel0 = $.extend(tempModel0, tempModel);
-									console.log(JSON.stringify(tempModel0))
 								}
 								//循环当前model中的回复数组
 								for(var item1 in tempModel0.Comments) {
@@ -351,7 +348,6 @@
 							console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
 							datasource = tempRspData
 							zonepArray.push(datasource);
-							console.log(JSON.stringify(datasource))
 							setSpaceDetail(datasource);
 
 						} else {
@@ -453,8 +449,9 @@
 			}
 
 			function addComment() {
+				
 				events.openNewWindowWithData('../show/add-comment.html', {
-					tempIndex: '0',
+					tempIndex: tempIndex,
 					zonepArray: zonepArray
 				})
 
@@ -501,9 +498,7 @@
 									//						var wobj = plus.webview.currentWebview();
 									//						wobj.reload(true);
 									var deleteNode = document.getElementById(index);
-									console.log(deleteNode.parentNode.innerHTML);
 									deleteNode.parentNode.removeChild(deleteNode);
-									console.log(deleteNode.parentNode);
 									zonepArray.splice(index, 1)
 								} else {
 									mui.toast(data.RspTxt);
@@ -541,18 +536,14 @@
 						postDataPro_setUserSpaceLikeByUser(comData, wd, function(data) {
 							wd.close();
 							if(data.RspCode == 0) {
-								console.log('index=' + index)
 								var a = document.getElementById("praise" + index);
 								a.style.color = 'rgb(26, 155, 255)'
 								//							mui.toast('点赞成功');
 								var PraiseList = document.getElementById("PraiseList" + index);
-								console.log(PraiseList.innerHTML);
 								var praiseNameList = PraiseList.getElementsByTagName("font");
-								console.log(praiseNameList.length)
 								if(praiseNameList.length > 0) {
 									var praiseName = praiseNameList[0];
 									praiseName.innerHTML = personalunick + '、' + praiseName.innerHTML;
-									console.log(praiseName.innerHTML);
 								} else {
 
 									PraiseList.innerHTML = '<img id= "praiseImg" src="../../image/dynamic/praise.png" class="dynamic-icon-praise-small mui-pull-left" />' +
@@ -587,7 +578,6 @@
 								} else {
 									console.log('一个人点赞')
 
-									console.log(PraiseList.outerHTML);
 									PraiseList.removeChild(praiseName);
 									var praiseImg = document.getElementById("praiseImg");
 									PraiseList.removeChild(praiseImg);
@@ -612,27 +602,21 @@
 				//			评论
 				mui('.mui-table-view').on('tap', '.dynamic-icon-comment', function() {
 					//				click.push('评论');
-					tempIndex = this.id.replace('comment', '');
-					console.log('tempIndex====' + tempIndex)
+					tempIndex = this.id.replace('comment' + '0zx', '');
+					tempIndex = tempIndex.replace('comment', '');
+					tempIndex = tempIndex.replace('zx', '');
 					addComment();
 
 					window.event.stopPropagation()
 
 				});
-				//底部评论按钮
-				mui('.mui-table-view').on('tap', '.dynamic-comment-btn', function() {
-					tempIndex = this.id.replace('bottomComment', '');
-					console.log('tap====' + tempIndex)
-					addComment();
 
-					window.event.stopPropagation()
-				});
 
 				//			回复评论
 				mui('.mui-table-view').on('tap', '.replyComment', function() {
-
-					tempIndex = this.id.replace('replyComment', '');
-					console.log('tempIndex====' + tempIndex)
+					tempIndex = this.id.replace('replyComment' + '0zx', '');
+					tempIndex = tempIndex.replace('replyComment', '');
+					tempIndex = tempIndex.replace('zx', '');
 					addComment();
 
 					window.event.stopPropagation()
