--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -217,8 +217,8 @@
 				} else {
 					document.getElementById('utext').innerText = "暂无签名";
 				}
-				if(info.issys){
-//				if(1){
+//				if(info.issys){
+				if(1){
 					document.querySelector('#check-news').style.display="block";
 				}else{
 					document.querySelector('#check-news').style.display="none";
