--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -38,12 +38,12 @@
 		<script type="text/javascript" src="../../js/show/show-sub.js"></script>
 		<script type="text/javascript">
 			mui.init();
-			var datasource = {};
-			var idFlag = 'zx';
-			var pageIndex = 1;
-			var totalPage = 0;
+			var datasource = {};//数据源
+			var idFlag = 'zx';//判断是展现还是空间
+			var pageIndex = 1;//第几页
+			var totalPage = 0;//总页数
 			var id = 0; //cell的id
-			var pageFlag = 1;
+			var pageFlag = 1;//
 			var pullFlag = 0;
 			var zonepArray;
 			var personalunick = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).unick; //用户昵称
