--- a/JiaoBaoYun-hb/html/utils/customizeCity.html
+++ b/JiaoBaoYun-hb/html/utils/customizeCity.html
@@ -164,8 +164,10 @@
 						if(select) {
 							this.className = 'mui-table-view-cell mui-media';
 						} else {
-							if(mui('.city-select').length > 9) {
+							if(main.data.id == '1' && mui('.city-select').length > 9) {
 								mui.toast('最多只允许订制10个城市');
+							} else if(main.data.id == '0' && mui('.city-select').length > 49) {
+								mui.toast('最多只允许订制50个城市');
 							} else {
 								this.className = 'mui-table-view-cell mui-media city-select';
 							}
