--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -22,6 +22,14 @@
 						隐私
 					</a>
 				</li>-->
+				<li class="mui-table-view-cell" id="0">
+					<a id="change-phoneNum" class="mui-navigate-right" style="font-size: 15px;">
+						<p class="mui-pull-right" id='change_phoneNum' style="font-size: 13px;margin-right: 30px;"></p>
+						<div class="mui-media-body" style="font-size: 15px;">
+							绑定手机
+						</div>
+					</a>
+				</li>
 				<li class="mui-table-view-cell">
 					<a id="change-passwords" class="mui-navigate-right" style="font-size: 15px;">
 						修改密码
@@ -44,30 +52,47 @@
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init({
-				swipeBack:true //启用右滑关闭功能
+				swipeBack: true //启用右滑关闭功能
 			});
+			//存储个人信息
+			var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 			mui.plusReady(function() {
-//				window.addEventListener("swiperight", function(e) {
-//					console.log('侧滑。。。');
-//                      //默认滑动角度在-45度到45度之间，都会触发右滑菜单，为避免误操作，可自定义限制滑动角度；
-//                      if (Math.abs(e.detail.angle) < 30) {
-//                          self.close();
-//                      }
-//                  });
+				console.log('tempInfo.uid:' + tempInfo.uid);
+				document.getElementById('change_phoneNum').innerText = tempInfo.uid;
+				//点击绑定手机cell，弹出
+				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
+					var index = this.id.replace('li', '');
+					console.log('index:' + index);
+					if(index == '0') {
+						mui.confirm(tempInfo.uid, '您已绑定手机号', ['取消', '更换'], function(e) {
+							var index = e.index;
+							switch(index) {
+								case 0: //取消
+									break;
+								case 1: //返回
+									//flag为2，表示是更改绑定手机
+									events.openNewWindowWithData('../register/register_phoneNumber.html', '2');
+									break;
+							}
+						}, 'div');
+					}
+				});
+				//				window.addEventListener("swiperight", function(e) {
+				//					console.log('侧滑。。。');
+				//                      //默认滑动角度在-45度到45度之间，都会触发右滑菜单，为避免误操作，可自定义限制滑动角度；
+				//                      if (Math.abs(e.detail.angle) < 30) {
+				//                          self.close();
+				//                      }
+				//                  });
 				//隐私
-//				events.addTap('yinsi', function() {
-//					mui.toast('此功能暂未开放');
-//				});
+				//				events.addTap('yinsi', function() {
+				//					mui.toast('此功能暂未开放');
+				//				});
 				//修改密码
-//				events.preload('../register/modify_password.html');
 				events.addTap('change-passwords', function() {
-//						events.fireToPageNone('../register/modify_password.html', 'changePasswords');
-//						plus.webview.getWebviewById('modify_password.html').show();
-						events.openNewWindowWithData('../register/modify_password.html', '1');
-//						events.openNewWindowWithData('QRCode.html');
-//						events.openNewWindowWithData('ReadQRCode.html');
-					})
-					//退出
+					events.openNewWindowWithData('../register/modify_password.html', '1');
+				});
+				//退出
 				events.addTap('quit', function() {
 					console.log('2222');
 					var btnArray = [{
@@ -84,8 +109,6 @@
 								break;
 							case 1: //退出登录
 								//判断是否设置了密码
-								//存储个人信息
-								var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 								console.log('tempinfo:' + JSON.toString(tempInfo));
 								if(Number(tempInfo.ispw) == 1) { //有密码
 									//发送注销协议
@@ -105,7 +128,7 @@
 											window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
 											//退出登录
 											events.logOff();
-//											plus.runtime.quit();
+											//											plus.runtime.quit();
 											//跳转到登录界面
 											events.openNewWindowWithData('../../html/register/login.html', '');
 										} else {
@@ -114,10 +137,8 @@
 									});
 
 								} else { //无密码
-//									events.fireToPageNone('../register/modify_password.html', 'settingPW');
 									events.openNewWindowWithData('../register/modify_password.html', '2');
 								}
-
 								break;
 						}
 					});
