--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -17,11 +17,11 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title"></h1>
+			<h1 class="mui-title" id="navTitle"></h1>
 		</header>
 		<div class="mui-content">
 			<div id="tishi" style="padding: 30px;text-align: center;">
-				<a style="color: black;font-size: 20px;">请输入你的手机号</a>
+				<a style="color: black;font-size: 20px;" id="tishiContent">请输入你的手机号</a>
 			</div>
 			<form class="mui-input-group">
 				<div class="mui-input-row">
@@ -30,7 +30,7 @@
 				</div>
 			</form>
 			<div class="mui-content-padded">
-				<button id='register' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border: none ; ">注册</button>
+				<button id='register' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border: none ; ">下一步</button>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
@@ -56,18 +56,25 @@
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
-				var regFlag;
+				var regFlag; //0注册，1验证码登录，2更改绑定手机号
+				//存储个人信息
+				var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 				//获取到手机号
 				var phoneNum = document.getElementById("phoneNumber");
-//				window.addEventListener('registerFlag', function(event) {
-//					regFlag = event.detail.data;
-//					phoneNum.value = '';
-//					console.log('验证码 flag=' + regFlag);
-//				});
+				var navTitle = document.getElementById("navTitle"); //标题
+				var tishiContent = document.getElementById("tishiContent"); //提示信息
+				var registerBtn = document.getElementById("register"); //注册按钮
 				var curPage = plus.webview.currentWebview();
 				regFlag = curPage.data;
+				if(regFlag == 0 || regFlag == 1) { //注册0、验证码登录1
+
+				} else { //更改绑定手机号2
+					navTitle.innerText = '更换手机号';
+					tishiContent.innerText = '更换手机后，下次登录可使用新手机号登录。当前手机号:' + tempInfo.uid;
+					tishiContent.style.color = '#7f7f7f';
+				}
 				phoneNum.value = '';
-//				events.preload('yanZhengMa.html');
+				//				events.preload('yanZhengMa.html');
 				events.addTap('register', function() {
 					document.activeElement.blur();
 					if(!phoneNum.value) {
@@ -91,54 +98,58 @@
 							shaketype: 'reg',
 							appid: plus.runtime.appid
 						};
-					} else { //验证码登录1
+					} else if(regFlag == 1) { //验证码登录1
 						comData = {
 							uuid: plus.device.uuid,
 							shaketype: 'login',
 							appid: plus.runtime.appid
 						};
+					} else if(regFlag == 2) { //更改绑定手机号
+						comData = {
+							uuid: plus.device.uuid,
+							shaketype: 'bind',
+							appid: plus.runtime.appid
+						};
 					}
 					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-					//发送网络请求，data为网络返回值
-					postDataEncry(storageKeyName.MAINURL + 'PostShakeHand', enData0, comData, 0, wd, function(data) {
-						wd.close();
-						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-						if(data.RspCode == 0) {
-							//存储到手机本地
-							window.myStorage.setItem(window.storageKeyName.SHAKEHAND, data.RspData);
-							//获取验证码协议
-							//需要加密的数据
-							var enData = {
-								uid: document.getElementById("phoneNumber").value
-							};
-							//发送网络请求，data为网络返回值
-							postDataEncry(storageKeyName.MAINURL + 'PostCode', enData, comData, 0, wd, function(data) {
-								//成功，关闭等待框
-								wd.close();
-
-								//将输入的手机号，传到验证码界面
-								var tempValue = {
-									phone: phoneNum.value,
-									flag: regFlag
+					var wd = events.showWaiting();
+						//发送网络请求，data为网络返回值
+						postDataEncry(storageKeyName.MAINURL + 'PostShakeHand', enData0, comData, 0, wd, function(data) {
+							wd.close();
+							console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+							if(data.RspCode == 0) {
+								//存储到手机本地
+								window.myStorage.setItem(window.storageKeyName.SHAKEHAND, data.RspData);
+								//获取验证码协议
+								//需要加密的数据
+								var enData = {
+									uid: document.getElementById("phoneNumber").value
 								};
-								events.openNewWindowWithData('yanZhengMa.html', tempValue);
-//								events.fireToPage('yanZhengMa.html', 'yanzhengma', function() {
-//									return tempValue;
-//								});
-								//								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-								if(data.RspCode != 0000) {
-									mui.toast(data.RspTxt);
-									return;
-								} else {
-
-								}
-							});
-						} else {
-							mui.toast(data.RspTxt);
-						}
-					});
-
+								//发送网络请求，data为网络返回值
+								postDataEncry(storageKeyName.MAINURL + 'PostCode', enData, comData, 0, wd, function(data) {
+									//成功，关闭等待框
+									wd.close();
+									//console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+									if(data.RspCode != 0000) {
+										mui.toast(data.RspTxt);
+										return;
+									} else {
+										//将输入的手机号，传到验证码界面
+										var tempValue = {
+											phone: phoneNum.value,
+											flag: regFlag
+										};
+										var tempV = {
+											tempValue: tempValue,
+											comData: comData
+										}
+										events.openNewWindowWithData('yanZhengMa.html', tempV);
+									}
+								});
+							} else {
+								mui.toast(data.RspTxt);
+							}
+						});
 				});
 			});
 		</script>
