审核新闻加载懒加载

--- a/JiaoBaoYun-hb/html/check/check-news.html
+++ b/JiaoBaoYun-hb/html/check/check-news.html
@@ -78,6 +78,7 @@
 		<script src="../../js/mui.pullToRefresh.material.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/libs/jquery.lazyload.min.js"></script>
 		<script src="../../js/check/check-news.js"></script>
 	</body>
 
