--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -28,7 +28,7 @@
 						<img id="stu-head" class='stuInfo-img' />
 						<div class='stuInfo-words'>
 							<h5 id='stu-name' class="stu-name"></h5>
-							<p id='submit-time'></p>
+							<p id='submit-time' class="submit-time"></p>
 						</div>
 					</div>
 					<div class="the-line"></div>
